--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "server": "json-server --watch db.json --port 3000",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -18,7 +19,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@types/googlemaps": "^3.43.3",
     "file-saver": "^2.0.5",
+    "ngx-pagination": "^6.0.3",
     "read-excel-file": "^5.5.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
